instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:11: error: not found: value avancde
avancde(2:Int);
^